test/e2e/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/POST__api_atlas_v2_groups_0123456789abcdef01234567_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Tue, 01 Apr 2025 10:10:03 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="B74MPkgoQ3gcK/2+olJr8R1PeXFduxLP", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 6

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}